--- a/TODO
+++ b/TODO
@@ -4,4 +4,5 @@
 7/21/12		Add fastseed option to gui
 7/22/12		Same mask for all projections ?
 7/22/12		2d plotting of 1d image in browser broken
+7/22/12		Counting in filename entry in GUI (was taking a LOOONG time). Fix with new caching system.
 
