Working on alignnrg. Fixed some debugging issues.

--- a/TODO
+++ b/TODO
@@ -1,3 +1,4 @@
+High priority
 7/21/12		Automatic filter selection at ctf stage
 7/21/12		BDB->HDF
 7/21/12		Develop JSON files
@@ -6,3 +7,5 @@
 7/22/12		2d plotting of 1d image in browser broken
 7/22/12		Counting in filename entry in GUI (was taking a LOOONG time). Fix with new caching system.
 
+Low priority
+7/25/12		In orthographic projection in 3-D viewer, mouse wheel behavior is inverted
