Recognize .st as mrc files

--- a/TODO
+++ b/TODO
@@ -31,6 +31,8 @@ High priority
 10/24/12	Azimuthal filtering to remove 'hair'. "How to legally give a molecule a shave"
 Low priority
 7/25/12		In orthographic projection in 3-D viewer, mouse wheel behavior is inverted
+11/1/12		Remember windows need to recall their screen location when repening, and we need to put better labels on windows.
+
 
 Complete
 7/21/12		8/7/12	Add fastseed option to gui
