--- a/TODO
+++ b/TODO
@@ -7,7 +7,7 @@ High priority
 7/22/12		Counting in filename entry in GUI (was taking a LOOONG time). Fix with new caching system.
 8/2/12		More dimensions in tilt validate
 8/9/12		Astigmatism ?
-8/9/12		e2procpdb.py ?
+8/9/12		e2procpdb.py - Lin
 
 7/27/12		RCT .box import broken in projectmanager (temporarily removed)
 7/22/12		2d plotting of 1d image in browser broken
@@ -30,10 +30,13 @@ High priority
 10/23/12	Euler display in refine_multi
 10/24/12	Azimuthal filtering to remove 'hair'. "How to legally give a molecule a shave"
 11/06/12	Use new particle centers to readjust box locations and rebox particles.
+11/28/12	When class-averages get averaged, the header particle numbers in the average of averages is messed up
+11/28/12	Need a good method for checking reference-free class-averages against reprojections
 
 Low priority
 7/25/12		In orthographic projection in 3-D viewer, mouse wheel behavior is inverted
 11/1/12		Remember windows need to recall their screen location when repening, and we need to put better labels on windows.
+11/28/12	Fix EMAN1 CTF reader. Fails unit test
 
 
 Complete
