--- a/TODO
+++ b/TODO
@@ -7,7 +7,6 @@ High priority
 7/22/12		Counting in filename entry in GUI (was taking a LOOONG time). Fix with new caching system.
 8/2/12		More dimensions in tilt validate
 8/9/12		Astigmatism ?
-8/9/12		e2procpdb.py - Lin
 
 7/27/12		RCT .box import broken in projectmanager (temporarily removed)
 7/22/12		2d plotting of 1d image in browser broken
@@ -21,10 +20,8 @@ High priority
 8/14/12		monte-carlo initial model generator
 8/17/12		Registration system in GUI
 
-9/6/12		Histogram normalization in image display ?
 9/6/12		--maxshift seems to cause segfaults sometimes
 
-9/27/12		3D fallback for old OpenGL
 10/5/12		Doesn't handle projects with >1000 files very gracefully (slow, ryr-open)
 
 10/23/12	Euler display in refine_multi
@@ -47,4 +44,6 @@ Complete
 7/21/12		8/7/12	Add fastseed option to gui
 8/1/12		8/5?/12	HDF file caching is leaving open pointers for other types
 8/5/12		8/7/12	Progress bar save in filtertool
-
+?/?/?		8/9/12	e2procpdb.py - Lin
+2/26/13		9/27/12	3D fallback for old OpenGL - Lin
+1/2013		9/6/12	Histogram normalization in image display - Lin
