--- a/TODO
+++ b/TODO
@@ -2,10 +2,10 @@ High priority
 2.1
 6/27/13		Deal with shrunk particles
 6/27/13		DDD movies, allow 'usefilt'-like behavior for low/high dose particles
-6/27/13		boxing
 7/22/12		Counting in filename entry in GUI (was taking a LOOONG time). Fix with new caching system.
 8/2/12		More dimensions in tilt validate
 8/9/12		Astigmatism ?
+7/13/13		Gauss boxer can't be run from GUI on second image without funny button series
 
 7/27/12		RCT .box import broken in projectmanager (temporarily removed)
 7/22/12		2d plotting of 1d image in browser broken
@@ -39,12 +39,14 @@ Low priority
 
 
 Complete
-7/21/12		8/7/12	Add fastseed option to gui
-8/1/12		8/5?/12	HDF file caching is leaving open pointers for other types
-8/5/12		8/7/12	Progress bar save in filtertool
-?/?/?		8/9/12	e2procpdb.py - Lin
-2/26/13		9/27/12	3D fallback for old OpenGL - Lin
-1/2013		9/6/12	Histogram normalization in image display - Lin
+7/13/13		Tweaked refine_easy parameters a bit more
+7/13/13		7/11/13 Progress meter problem (was disabled by BDB cache test)
+8/7/12		7/21/12	Add fastseed option to gui
+8/5?/12		8/1/12	HDF file caching is leaving open pointers for other types
+8/7/12		8/5/12	Progress bar save in filtertool
+8/9/12		?/?/?	e2procpdb.py - Lin
+9/27/12		2/26/13	3D fallback for old OpenGL - Lin
+9/6/12		1/2013	Histogram normalization in image display - Lin
 7/21/12		Automatic filter selection at ctf stage
 7/21/12		BDB->HDF
 7/21/12		Develop JSON files
