--- a/TODO
+++ b/TODO
@@ -12,6 +12,7 @@ High priority
 2/20/14		Finish e2motion
 2/20/14		Eliminate simmx files
 
+2/24/14		Save sets in imagemx control panel error (updateGL, update not defined ?)
 2/20/14		Save plots as images, more features in 2-D plotting
 2/20/14		Progress display integrated in projectmanager
 7/27/12		RCT .box import broken in projectmanager (temporarily removed)
