--- a/TODO
+++ b/TODO
@@ -4,7 +4,6 @@ High priority
 6/27/13		DDD movies, allow 'usefilt'-like behavior for low/high dose particles
 7/22/12		Counting in filename entry in GUI (was taking a LOOONG time). Fix with new caching system.
 8/2/12		More dimensions in tilt validate
-8/9/12		Astigmatism ?
 7/13/13		Gauss boxer can't be run from GUI on second image without funny button series
 2/20/14		Problem with pickling particles and MPI transport  :^((((
 2/20/14		DDD movies, reference based alignment
@@ -12,6 +11,7 @@ High priority
 2/20/14		Finish e2motion
 2/20/14		Eliminate simmx files
 3/6/14		e2classaverage has hardcoded final aligner to reference, but imposes flips when it shouldn't happen
+3/8/14		Found that smaller than recommended angular step can produce slight resolution improvement combined with sep. Need to write new reconstructor with angular smearing in some way to compensate for reduced sampling without over smearing resulting reconstruction.
 
 2/24/14		Save sets in imagemx control panel error (updateGL, update not defined ?)
 2/20/14		Save plots as images, more features in 2-D plotting
@@ -66,3 +66,4 @@ Complete
 7/21/12		Develop JSON files
 7/22/12		Same mask for all projections ?
 7/27/12		Can't browse BDB dictionary contents
+9/13		Astigmatism ?
