--- a/TODO
+++ b/TODO
@@ -12,6 +12,7 @@ High priority
 2/20/14		Eliminate simmx files
 3/6/14		e2classaverage has hardcoded final aligner to reference, but imposes flips when it shouldn't happen
 3/8/14		Found that smaller than recommended angular step can produce slight resolution improvement combined with sep. Need to write new reconstructor with angular smearing in some way to compensate for reduced sampling without over smearing resulting reconstruction.
+3/29/14		e2refinevariance broken ?
 
 2/24/14		Save sets in imagemx control panel error (updateGL, update not defined ?)
 2/20/14		Save plots as images, more features in 2-D plotting
