--- a/TODO
+++ b/TODO
@@ -18,6 +18,8 @@ High priority
 6/12/14		new particle picker
 6/13/14		Fix internationalization bug with Qt
 6/14/14		e2markbadptcl
+7/7/14		scale box locations
+7/7/14		per-particle subunit subtraction for Chris
 
 2/24/14		Save sets in imagemx control panel error (updateGL, update not defined ?)
 2/20/14		Save plots as images, more features in 2-D plotting
