fix for masking artifact. Working on e2ctf wholemicrograph option

--- a/TODO
+++ b/TODO
@@ -22,6 +22,7 @@ High priority
 7/7/14		per-particle subunit subtraction for Chris
 7/27/14		ctf interactive seems to autosave parameters without button press
 7/27/14		ctf struct factor determination with oversampling messed up!!!
+9/1/14		Use whole micrograph for per-particle defocus determination (option)
 
 2/24/14		Save sets in imagemx control panel error (updateGL, update not defined ?)
 2/20/14		Save plots as images, more features in 2-D plotting
@@ -56,6 +57,7 @@ Low priority
 
 
 Complete
+8/29/14		Fixed B-factor option in e2ctf
 4/7/14		Make e2.py work with current ipython versions, finally
 2/20/14		Added --speed option
 2/12/14		Fixed e2evalparticles finally !
