--- a/TODO
+++ b/TODO
@@ -55,6 +55,7 @@ Low priority
 
 
 Complete
+10/16/14	10/16/14	e2refine_easy classiter -> 0 or 1 when it makes sense. This was limiting resolution in some cases
 9/28/14		9/25/14		Aligned class particle extraction
 9/25/14		7/7/14		per-particle subunit subtraction for Chris
 9/8/14		--box in e2evalimage now forces size
@@ -81,3 +82,4 @@ Complete
 7/22/12		Same mask for all projections ?
 7/27/12		Can't browse BDB dictionary contents
 9/13		Astigmatism ?
+
