Fixed severe issue with e2evalparticles. In "Mark Bad" mode it would only work in certain rare situations.

--- a/TODO
+++ b/TODO
@@ -53,6 +53,7 @@ Low priority
 
 
 Complete
+12/20/14	Critical fix: bad particle marking was partially broken. Could only mark bad one time
 12/12/14	Added support for new FEI SER format revision
 11/01/14	11/01/14	Fixed problem with 3D reconstruction. Was a normalization issue
 10/31/14	added e2ptclvsmap for finding the best individual particles for each projection
