--- a/TODO
+++ b/TODO
@@ -15,6 +15,7 @@ High priority
 6/12/14		per particle movie mode alignment
 6/12/14		new particle picker
 6/14/14		e2markbadptcl
+2/4/15		Isosurface coloring in 3d viewer messed up
 
 7/7/14		scale box locations
 7/27/14		ctf interactive seems to autosave parameters without button press
@@ -48,7 +49,6 @@ High priority
 
 Low priority
 7/25/12		In orthographic projection in 3-D viewer, mouse wheel behavior is inverted
-11/1/12		Remember windows need to recall their screen location when repening, and we need to put better labels on windows.
 11/28/12	Fix EMAN1 CTF reader. Fails unit test
 
 
